--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p>Drinks</p>
                 </a>
                 
-                 <a href="list-recipes.html?category=desert" class="home-menu-item">
+                 <a href="list-recipes.html?category=dessert" class="home-menu-item">
                     <p>Dessert</p>
                 </a>
                 
